--- a/portfolio.html
+++ b/portfolio.html
@@ -48,19 +48,19 @@
     <section class="section">
         <div class="container">
             <ul class="button-row">
-                <li>
+                <li class="list-item">
                     <button type="button" class="portfolio-button">Все</button>
                 </li>
-                <li>
+                <li class="list-item">
                     <button type="button" class="portfolio-button">Веб-сайты</button>
                 </li>
-                <li>
+                <li class="list-item">
                     <button type="button" class="portfolio-button">Приложения</button>
                 </li>
-                <li>
+                <li class="list-item">
                     <button type="button" class="portfolio-button">Дизайн</button>
                 </li>
-                <li>
+                <li class="list-item">
                     <button type="button" class="portfolio-button">Маркетинг</button>
                 </li>
             </ul>
