fixes to homework-3

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
     <section class="advantages">
         <div class="container">
-            <h2 hidden>Наши преимущества</h2>
+            <h2 class="visually-hidden">Наши преимущества</h2>
             <ul class="row">
                 <li class="point-item">
                     <h3 class="point-header">Внимание к деталям</h3>
@@ -100,26 +100,35 @@
     <section class="section">
         <div class="container">
             <h2 class="team-title">Наша команда</h2>
-            <ul class="row">
+            <ul class="row card-row">
                 <li class="card">
                     <img src="./images/product-designer.jpg" alt="product-designer" width="270" height="260">
-                    <h3 class="name">Игорь Демьяненко</h3>
-                    <p lang="en" class="position">Product Designer</p>
+                    <div class="card-info">
+                        <h3 class="name">Игорь Демьяненко</h3>
+                        <p lang="en" class="position">Product Designer</p>
+                    </div>
+                    
                 </li>
                 <li class="card">
                     <img src="./images/frontend-developer.jpg" alt="frontend-developer" width="270" height="260">
-                    <h3 class="name">Ольга Репина</h3>
-                    <p lang="en" class="position">Frontend Developer</p>
+                    <div class="card-info">
+                        <h3 class="name">Ольга Репина</h3>
+                        <p lang="en" class="position">Frontend Developer</p>
+                    </div> 
                 </li>
                 <li class="card">
                     <img src="./images/marketing.jpg " alt="marketing" width="270" height="260">
-                    <h3 class="name">Николай Тарасов</h3>
-                    <p lang="en" class="position">Marketing</p>
+                    <div class="card-info">
+                        <h3 class="name">Николай Тарасов</h3>
+                        <p lang="en" class="position">Marketing</p>
+                    </div>
                 </li>
                 <li class="card">
                     <img src="./images/ui-designer.jpg" alt="ui-designer" width="270" height="260">
-                    <h3 class="name">Михаил Ермаков</h3>
-                    <p lang="en" class="position">UI Designer</p>
+                    <div class="card-info">
+                        <h3 class="name">Михаил Ермаков</h3>
+                        <p lang="en" class="position">UI Designer</p>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -129,15 +138,15 @@
             <a href="index.html" class="logo footer-logo"><span>Web</span>Studio</a>
             <address class="address">
                 <ul>
-                    <li>
+                    <li class="address-item">
                         <a href="https://goo.gl/maps/iHY8PVEZyVwbVwEV8" target="_blank" rel="noopener noreferrer"
                             class="link-hover footer-link address">г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
-                    <li>
+                    <li class="address-item">
                         <a href="mailto:info@example.com" target="_blank" rel="noopener noreferrer"
                             class="footer-link">info@example.com</a>
                     </li>
-                    <li>
+                    <li class="address-item">
                         <a href="tel:+380991111111" target="_blank" rel="noopener noreferrer" class="footer-link">+38
                             099
                             111 11 11</a>
