--- a/portfolio.html
+++ b/portfolio.html
@@ -138,15 +138,15 @@
             <a href="index.html" class="logo footer-logo"><span>Web</span>Studio</a>
             <address class="address">
                 <ul>
-                    <li>
+                    <li class="address-item">
                         <a href="https://goo.gl/maps/iHY8PVEZyVwbVwEV8" target="_blank" rel="noopener noreferrer"
                             class="link-hover footer-link address">г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
-                    <li>
+                    <li class="address-item">
                         <a href="mailto:info@example.com" target="_blank" rel="noopener noreferrer"
                             class="footer-link">info@example.com</a>
                     </li>
-                    <li>
+                    <li class="address-item">
                         <a href="tel:+380991111111" target="_blank" rel="noopener noreferrer" class="footer-link">+38
                             099
                             111 11 11</a>
