--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </ul>
         </div>
     </section>
-    <section class="section">
+    <section class="section team-section">
         <div class="container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="row card-row">
@@ -138,7 +138,7 @@
         <div class="container">
             <a href="index.html" class="logo footer-logo"><span>Web</span>Studio</a>
             <address class="address">
-                <ul>
+                <ul class="address-row">
                     <li class="address-item">
                         <a href="https://goo.gl/maps/iHY8PVEZyVwbVwEV8" target="_blank" rel="noopener noreferrer"
                             class="link-hover footer-link address">г. Киев, пр-т Леси Украинки, 26</a>
