--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
             <ul class="row portfolio-row">
                 <li class="portfolio-card">
                     <img src="./images/portfolio/web.jpg" alt="website" width="370" height="294">
-                    <div class="card-info">
+                    <div class="portfolio-info">
                         <h3 class="project-name">Технокряк</h3>
                         <p class="project-type">Веб-сайт</p>
                     </div>
@@ -76,7 +76,7 @@
                 <li class="portfolio-card">
                     <img src="./images/portfolio/poster.jpg" alt="poster with basketball players" width="370"
                         height="294">
-                    <div class="card-info">
+                    <div class="portfolio-info">
                         <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
                         <p class="project-type">Дизайн</p>
                     </div>
@@ -90,7 +90,7 @@
                 </li>
                 <li class="portfolio-card">
                     <img src="./images/portfolio/prime.jpg" alt="headphones" width="370" height="294">
-                    <div class="card-info">
+                    <div class="portfolio-info">
                         <h3 class="project-name">Проект Prime</h3>
                         <p class="project-type">Маркетинг</p>
                     </div>
@@ -104,14 +104,14 @@
                 </li>
                 <li class="portfolio-card">
                     <img src="./images/portfolio/inspiration.jpg" alt="monitor" width="370" height="294">
-                    <div class="card-info">
+                    <div class="portfolio-info">
                         <h3 class="project-name">Inspiration has no Borders</h3>
                         <p class="project-type">Веб-сайт</p>
                     </div>
                 </li>
                 <li class="portfolio-card">
                     <img src="./images/portfolio/edition.jpg" alt="book" width="370" height="294">
-                    <div class="card-info">
+                    <div class="portfolio-info">
                         <h3 class="project-name">Издание Limited Edition</h3>
                         <p class="project-type">Дизайн</p>
                     </div>
@@ -119,14 +119,14 @@
                 </li>
                 <li class="portfolio-card">
                     <img src="./images/portfolio/lab.jpg" alt="tag" width="370" height="294">
-                    <div class="card-info">
+                    <div class="portfolio-info">
                         <h3 class="project-name">Проект LAB</h3>
                         <p class="project-type">Маркетинг</p>
                     </div>
                 </li>
                 <li class="portfolio-card">
                     <img src="./images/portfolio/business.jpg" alt="business-site" width="370" height="294">
-                    <div class="card-info">
+                    <div class="portfolio-info">
                         <h3 class="project-name">Growing Business</h3>
                         <p class="project-type">Приложение</p>
                     </div>
@@ -138,7 +138,7 @@
         <div class="container">
             <a href="index.html" class="logo footer-logo"><span>Web</span>Studio</a>
             <address class="address">
-                <ul>
+                <ul class="address-row">
                     <li class="address-item">
                         <a href="https://goo.gl/maps/iHY8PVEZyVwbVwEV8" target="_blank" rel="noopener noreferrer"
                             class="link-hover footer-link address">г. Киев, пр-т Леси Украинки, 26</a>
